version=12.1.41_dev
# bug fix: {*}.resno, .atomno, etc. where the property is an integer returns sum, not average



Former-commit-id: f917c4baeda920be3ce65c0133b251528757c32e